Upgrade to MVC 1.0-pfd and downgrade to Java 8